fix visualizer on macs and update samples

--- a/source/website/wwwroot/explorer/index.html
+++ b/source/website/wwwroot/explorer/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+﻿<html lang="en">
 <head>
     <meta charset = "utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -1196,15 +1196,9 @@
 <tbody>
 <tr>
 <td><strong>type</strong></td>
-<td><strong>&quot;Input.ToggleChoice&quot;</strong></td>
+<td><strong>&quot;Input.Toggle&quot;</strong></td>
 <td>true</td>
 <td></td>
-</tr>
-<tr>
-<td><strong>style</strong></td>
-<td><a href="#choiceinputstyle">ChoiceInputStyle</a></td>
-<td>false</td>
-<td>Style for choice</td>
 </tr>
 <tr>
 <td><strong>id</strong></td>
