--- a/source/website/wwwroot/samples/index.html
+++ b/source/website/wwwroot/samples/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+﻿<html lang="en">
 <head>
     <meta charset = "utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -621,7 +621,7 @@
 				},
 				{
 					"type": "Column",
-					"size": "auto",
+					"size": 1,
 					"items": [
 						{
 							"type": "TextBlock",
@@ -965,7 +965,7 @@
                     "columns": [
                         {
                             "type": "Column",
-                            "size": 1,
+                            "size": "stretch",
                             "items": [
                                 {
                                     "type": "TextBlock",
