--- a/source/website/wwwroot/visualizer/index.html
+++ b/source/website/wwwroot/visualizer/index.html
@@ -33,11 +33,8 @@
             font-family: "Segoe UI Semilight", sans-serif;
         }
     </style>
-    <!--<script src="node_modules/microsoft-adaptivecards/dist/adaptive-cards.js"></script>-->
-    <script src="built/visualizer-with-renderer.js"></script>
-    <script>
-
-    </script>
+    <script src="../node_modules/microsoft-adaptivecards/dist/adaptive-cards.js"></script>
+    <script src="built/visualizer.js"></script>
 </head>
 <body>
     <div class="uiRoot">
